build : Deploy Test

--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="./favicon.ico" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="/logo192.png" />
-  <link rel="/manifest" href="/manifest.json" />
-  <title>Workout Web-App</title>
-  <script defer="defer" src="./static/js/main.a461af0e.js"></script>
-  <link href="./static/css/main.5d20a487.css" rel="stylesheet">
-</head>
-
-<body>
-  <div id="root"></div>
-</body>
-
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="CSKim's Workout Web-App made with React, Redux, Node.js, Express, MongoDB, and Mongoose."
+    />
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="/manifest" href="/manifest.json" />
+    <title>Workout Web-App</title>
+    <script defer="defer" src="/static/js/main.67bc2c84.js"></script>
+    <link href="/static/css/main.334ae77d.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
