--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,20 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="https://cskim999.github.io/Workout_WebApp.Project_2.0-With-React/favicon.ico"
-    />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link
-      rel="/manifest"
-      href="https://cskim999.github.io/Workout_WebApp.Project_2.0-With-React/manifest.json"
-    />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Workout Web-App</title>
   </head>
   <body>
